# simple-render-engine

./: .gitignore  CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/Core/Input/: CMakeLists.txt  GLFWInput.cpp  Input.h  KeyCode.h
Engine/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
Engine/Memory/: CMakeLists.txt  LinearAllocator.cpp  MemoryAllocator.cpp  MemoryAllocator.h  MemoryChunkManager.h  MemoryChunkManager.tpp  MemoryLinearManager.cpp  MemoryLinearManager.h  MemoryStackManager.cpp  MemoryStackManager.h  PoolAllocator.cpp  StackAllocator.cpp
Engine/Model-Loader/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  ObjLoader.cpp  ObjLoader.h  RenderModel.h
Engine/Renderer/: CMakeLists.txt  GraphicsDevice.h  RenderBackend.h  RenderCommand.h  RenderCommandQueue.h  RenderConfiguration.h  RenderContext.cpp  RenderContext.h  RenderPipeline.h  Renderer.h  ResourceManager.cpp  ResourceManager.h  SpectatorCamera.cpp  SpectatorCamera.h  SwapChain.h  UBOData.h
Engine/Renderer/OpenGL/: GraphicsDevice.cpp  RenderPipeline.cpp
Engine/Window/: CMakeLists.txt  Window.cpp  Window.h
Shader-GLSL/: BRDF PBR.frag  phong.frag  test.vert
